--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <div class="porthole-10"><h2>Welcome to</h2></div>
                     <div class="porthole-15"><h1>Porthole</h1></div>
                     <div class="hero-3 porthole-10"><h3>A javascript/css parallax effect</h3></div>
-                    <div class="hero-4 porthole-10"><h4>[ Try Scrolling! ]</h4></div>
+                    <div class="hero-4 porthole-10"><h4>[ Try Scrolling ]</h4></div>
                 </div>
                 <!-- <div class="subtitle">by Nathaniel Campbell</div> -->
             </div>
@@ -53,7 +53,7 @@
             }
 
             main{
-                height: 120vh;
+                height: 150vh;
                 display:flex;
                 flex-direction: column;
                 align-items: center;
